# tars

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
crates/tars-cli/: Cargo.toml
crates/tars-cli/src/: generator.rs  main.rs  scaffold.rs
crates/tars-core/: Cargo.toml
crates/tars-core/src/: app.rs  binding.rs  config.rs  controller.rs  cors.rs  error.rs  lib.rs  middleware.rs  request.rs  resource.rs  response.rs  route.rs  server.rs
crates/tars-core/src/validation/: form_request.rs  mod.rs  rule.rs  validator.rs
crates/tars-frontend/: Cargo.toml
crates/tars-frontend/src/: api.rs  component.rs  form.rs  lib.rs  link.rs  router.rs  runtime.rs  store.rs
crates/tars-orm/: Cargo.toml
crates/tars-orm/src/: connection.rs  factory.rs  lib.rs  migration.rs  model.rs  query.rs  resource.rs  seeder.rs
crates/tars-ui/: Cargo.toml
crates/tars-ui/src/: alert.rs  button.rs  card.rs  container.rs  form.rs  heading.rs  input.rs  lib.rs  link.rs  page.rs  spinner.rs  styles.rs  table.rs  textarea.rs
crates/tars-validation/: Cargo.toml
crates/tars-validation/src/: form_request.rs  lib.rs  validator.rs
example-app/: .env  .gitignore  Cargo.toml  lib.rs  routes.rs
example-app/app/: mod.rs
example-app/app/Http/: mod.rs
example-app/app/Http/Controllers/: user_controller.rs
example-app/app/Http/Middleware/: mod.rs
example-app/app/Http/Requests/: mod.rs  store_user_request.rs
example-app/app/Providers/: app_service_provider.rs
example-app/app/http/: mod.rs
example-app/app/http/controllers/: user_controller.rs
example-app/app/http/middleware/: authenticate.rs
example-app/app/http/requests/: store_user_request.rs  update_user_request.rs
example-app/app/http/resources/: mod.rs  user_resource.rs
example-app/app/providers/: mod.rs
example-app/bootstrap/: migrate.rs  seed.rs  server.rs
example-app/config/: app.toml  database.toml
example-app/database/: mod.rs
example-app/database/factories/: mod.rs  user_factory.rs
example-app/database/migrations/: _0001_create_users_table.rs  mod.rs
example-app/database/seeders/: database_seeder.rs  mod.rs  user_seeder.rs
example-app/frontend/: Cargo.toml  Dioxus.toml  build.rs
example-app/frontend/src/: main.rs
example-app/models/: user.rs
example-app/resources/: Cargo.toml  Dioxus.toml  build.rs  main.rs  shared.rs
example-app/resources/routes/: index.rs  users.rs
example-app/resources/routes/users/: [id].rs  create.rs
example-app/resources/routes/users/[id]/: edit.rs
example-app/resources/views/: app.rs
example-app/routes/: api.rs  web.rs
example-app/src/: lib.rs
example-app/tests/feature/: users_test.rs
example-app/tests/unit/: validation_test.rs
