[workspace]
resolver = "2"
members = [
    "crates/tars-core",
    "crates/tars-orm",
    "crates/tars-validation",
    "crates/tars-cli",
    "crates/tars-frontend",
    "crates/tars-ui",
    "example-app",
    "example-app/frontend",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["TARS Framework"]
license = "MIT"
repository = "https://github.com/mzyxnuel/tars"

[workspace.dependencies]
tars-core = { path = "crates/tars-core" }
tars-orm = { path = "crates/tars-orm" }
tars-validation = { path = "crates/tars-validation" }
tars-macros = { path = "crates/tars-macros" }
tars-cli = { path = "crates/tars-cli" }
tars-frontend = { path = "crates/tars-frontend" }
tars-ui = { path = "crates/tars-ui" }

# Runtime & HTTP
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
hyper = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "chrono", "uuid", "json"] }

# Utilities
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
regex = "1.11"
once_cell = "1.20"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Frontend - Dioxus
dioxus = { version = "0.6", features = ["router"] }
dioxus-router = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dotenv / Config
dotenvy = "0.15"
toml = "0.8"

# Macros
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
