[package]
name = "tars-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tars"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
