[package]
name = "example-app-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tars-frontend = { workspace = true }
dioxus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
web = ["tars-frontend/web"]
desktop = ["tars-frontend/desktop"]
mobile = ["tars-frontend/mobile"]

[[bin]]
name = "frontend"
path = "src/main.rs"
