[package]
name = "example-resources"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tars-frontend = { workspace = true }
tars-ui = { workspace = true }
dioxus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
web = ["tars-frontend/web"]
desktop = ["tars-frontend/desktop"]
mobile = ["tars-frontend/mobile"]

[[bin]]
name = "example-resources"
path = "main.rs"
